static/css/app.css
body {
    padding-top: 80px;
    background: #334 url(/static/img/background.png) fixed;
}

*:FOCUS {
    outline: 0 !important;
}

section.urls {
    margin-top: 40px;
}

input {
    -webkit-transition: all 0.3s ease-in-out !important;
            transition: all 0.3s ease-in-out !important;
}

.bg-me {
    background: whitesmoke !important;
}

.navbar {
    height: 80px;
    padding-top: 15px;
    box-shadow: 0 0 15px;
    background: #323232;
}

.navbar-brand img {
    display: inline-block;
    width: 32px;
    margin: -5px 0;
    margin-right: 5px;
}

.main {
    background: whitesmoke;
    border: 1px solid #aaa;
    border-top: none;
    padding: 40px 30px;
    margin-bottom: 50px;
    margin-top: -4px;
    -webkit-border-radius: 4px;
            border-radius: 4px;
}

input.search {
    padding: 22px;
    background: #eee;
    -webkit-border-radius: 100px;
            border-radius: 100px;
    -webkit-box-shadow: inset 0 3px 7px rgba(0, 0, 0, 0.1);
            box-shadow: inset 0 3px 7px rgba(0, 0, 0, 0.1);
}

input.search:FOCUS {
    background: rgba(255, 255, 255, 0.5);
}

.format-switcher {
    position: relative;
    top: 45px;
    opacity: 0.9;
}

.panel-body {
    padding: 8px 20px;
}

.panel p {
    padding: 7px 0;
    margin: 0;
}

.panel span {
    padding: 0;
}

.panel span input {
    border-top: 0;
    border-bottom: 0;
    border-color: #ddd;
    margin: -8px;
    height: 50px;
    color: cadetblue;
    -webkit-border-radius: 0;
            border-radius: 0;
    -webkit-box-shadow: 0 0;
            box-shadow: 0 0;
}

.panel span input:FOCUS {
    background: #ddd;
    border-color: #ddd;
    -webkit-box-shadow: 0 0;
            box-shadow: 0 0;
}

.panel span img {
    padding: 7px 0;
    max-width: 100%;
}

.footer {
    background: #303030;
    border-top: 1px solid #202020;
    color: #777;
    font-style: italic;
    padding: 30px;
    -webkit-box-shadow: 0 9999px 0 9999px #303030;
            box-shadow: 0 9999px 0 9999px #303030;
}

